Fix #1298 - Adds overflow-ellipsis to URIs in AppVersionComponent and visible on hover.

--- a/src/main/resources/assets/css/main.less
+++ b/src/main/resources/assets/css/main.less
@@ -310,6 +310,10 @@ fieldset[disabled] .btn-info.active {
   white-space: nowrap;
 }
 
+.overflow-ellipsis:hover {
+  overflow: visible;
+}
+
 /* ==============
  * Textures
  * ==============
